--- a/app/src/main/res/layout/activity_list_of_available_recipes.xml
+++ b/app/src/main/res/layout/activity_list_of_available_recipes.xml
@@ -16,7 +16,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/availableRecipesLW"
+        android:id="@+id/availableReciepesLW"
         android:layout_below="@+id/toolbar"
         android:layout_centerHorizontal="true" />
 
