--- a/app/src/main/res/layout/card_available_reciepe.xml
+++ b/app/src/main/res/layout/card_available_reciepe.xml
@@ -2,66 +2,139 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="130dp"
     android:layout_margin="5dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:focusableInTouchMode="false"
-    android:focusable="false"
     android:orientation="vertical"
     card_view:cardCornerRadius="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="95dp"
-        android:focusableInTouchMode="false"
-        android:focusable="false"
+        android:layout_height="wrap_content"
         android:id="@+id/Rel">
 
-        <ImageView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/avlRcpImageView"
+            android:layout_height="70dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:src="@drawable/maxresdefault"
-            android:focusableInTouchMode="false"
-            android:focusable="false"/>
+            android:id="@+id/relativeLayout">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/avlRcpNameTW"
-            android:paddingLeft="12dp"
-            android:paddingTop="20dp"
-            android:fontFamily="sans-serif-condensed"
-            android:gravity="left"
-            android:textSize="20dp"
-            android:paddingBottom="15dp"
-            android:text="Имя"
-            android:layout_marginLeft="43dp"
-            android:layout_marginStart="43dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:focusableInTouchMode="false"
-            android:focusable="false"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/avlRcpImageView"
+                android:src="@drawable/tetet"
+                android:padding="0dp"
+                android:scaleType="centerCrop"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_above="@+id/availableReciepesLW"
+                android:visibility="visible" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="time"
-            android:id="@+id/timeTW"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="10dp"
-            android:focusableInTouchMode="false"
-            android:focusable="false"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/relativeLayout">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/avlRcpNameTV"
+                android:gravity="left"
+                android:textSize="20dp"
+                android:text="Пицца"
+                android:visibility="visible"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="14dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="2dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/numOfIngs"
+                android:layout_alignTop="@+id/view"
+                android:layout_below="@+id/avlRcpNameTV"
+
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="5dp"
+                android:gravity="center" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@color/grey"
+                android:id="@+id/view"
+                android:layout_centerVertical="true"
+                android:layout_alignLeft="@+id/numberOfStepsTV"
+                android:layout_alignStart="@+id/numberOfStepsTV"
+                android:layout_marginRight="10dp" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="fill_parent"
+                android:background="@color/grey"
+                android:id="@+id/viewVerticalLeft"
+                android:layout_alignParentBottom="true"
+                android:layout_toLeftOf="@+id/numOfIngs"
+                android:layout_toStartOf="@+id/numOfIngs"
+                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_alignTop="@+id/view" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="wrap_content"
+                android:background="@color/grey"
+                android:id="@+id/viewVerticalRight"
+                android:layout_alignParentBottom="true"
+                android:layout_toRightOf="@+id/numOfIngs"
+                android:layout_toEndOf="@+id/numOfIngs"
+                android:layout_marginLeft="21dp"
+                android:layout_marginStart="21dp"
+                android:layout_alignTop="@+id/view" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/timeTV"
+                android:layout_alignTop="@+id/view"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:paddingRight="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="20dp"
+                android:paddingLeft="20dp"
+                android:gravity="center" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/numberOfStepsTV"
+                android:layout_alignTop="@+id/view"
+                android:layout_alignLeft="@+id/avlRcpNameTV"
+                android:layout_alignStart="@+id/avlRcpNameTV"
+                android:layout_marginTop="5dp"
+                android:paddingLeft="30dp"
+                android:paddingRight="20dp"
+                android:gravity="center" />
+
+        </RelativeLayout>
+
     </RelativeLayout>
-
 </android.support.v7.widget.CardView>
