--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,14 +30,20 @@
         <item name="android:textColorSecondary">@color/abc_secondary_text_material_dark</item>
     </style>
 
+    <style name="AppSearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <!--<item name="android:textCursorDrawable">@android:draw</item>-->
+        <item name="queryBackground">@android:color/transparent</item>
+        <item name="searchIcon">@android:drawable/ic_menu_search</item>
+        <item name="closeIcon">@android:drawable/ic_notification_clear_all</item>
+        <!--<item name="queryHint">@string/search_hint</item>-->
+        <item name="android:imeActionId">6</item>
+    </style>
+
     <style name="TabIndicator" />
 
     <declare-styleable name="ScrimInsetsView">
         <attr name="insetForeground" format="reference|color" />
     </declare-styleable>
-
-
-
 
 
     <color name="colorMain">#EF6C00</color>
