--- a/app/src/main/res/menu/menu_dynamics_search.xml
+++ b/app/src/main/res/menu/menu_dynamics_search.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:yourapp="http://schemas.android.com/apk/res-auto">
- -   <item
+    <item
         android:id="@+id/action_search"
         android:title="@android:string/search_go"
         android:icon="@android:drawable/ic_menu_search"
