new search tool.
The instrument of search is added manually. Results are output on
pressing a letter. It is necessary to hide and show the keyboard in
addition.

--- a/app/src/main/res/layout/activity_search_ingredients.xml
+++ b/app/src/main/res/layout/activity_search_ingredients.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="442dp"
         android:id="@+id/findedIngsRecyclerView"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.83" />
 
 </LinearLayout>
