--- a/app/src/main/res/menu/menu_dynamics_search.xml
+++ b/app/src/main/res/menu/menu_dynamics_search.xml
@@ -5,6 +5,6 @@
         android:id="@+id/action_search"
         android:title="@android:string/search_go"
         android:icon="@android:drawable/ic_menu_search"
-        yourapp:showAsAction="always|collapseActionView"
-        yourapp:actionViewClass="android.support.v7.widget.SearchView" />
+        yourapp:showAsAction="always"/>
+
 </menu>
