--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -1,5 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+	<string-array name="snacks_salat_so_smetanoy">
+        <item>Обмытый и отсушенный зеленый салат нарезать и сложить в миску.</item>
+        <item>Яйца, сваренные вкрутую, нарезать тонкими ломтиками и смешать с соусом из сметаны с уксусом.</item>
+        <item>Перед самой подачей к столу заправить салат сметанным соусом с яйцом, уложить в салатник, обложить кружочками свежих огурцов и посыпать мелко нарезанным укропом или зеленью петрушки.</item>
+        <item>Подается салат ко всем мясным и рыбным блюдам.</item>
+        </string-array>
 
     <string-array name="snacks_stuffed_eggs">
         <item>Лук мелко нарезать</item>
