--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
 
         <color name="primary">#FF9800</color>
         <color name="primaryDark">#E65100</color>
-
+        <color name="black">#000000</color>
         <color name="ripple">#ff80ab</color>
         <color name="accent">#ff4081</color>
         <color name="accent_pressed">#f50057</color>
