--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/categoriesLinear">
+    android:id="@+id/categoriesFragmentCont">
 
     <include layout="@layout/toolbar_actionbar"></include>
 </LinearLayout>
