--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -1,10 +1,78 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+	<string-array name="tasty_oli_for_fish">
+	<item>Для некоторых рыбных консервов входящее в их состав растительное масло предварительно ароматизируют.</item>
+	<item>На 1 л масла берут 35–50 г очищенной и нарезанной на куски петрушки, столько же сельдерея,
+        пряностей: майорана и тмина по 1 гр., душистого перца и лаврового листа по 3 г. Овощи кладут непосредственно в масло, а пряности — завязанными в марлевый мешочек.</item>
+	<item>Затем масло дважды прогревают: первый раз его греют в течение 30 минут при 75–80 гр.,
+        а второй раз — 60 минут при 100 гр. Между первым и вторым прогревом должны пройти одни или двое суток.</item>
+	<item>Овощи и пряности вынимают из масла только после второго прогрева, затем масло фильтруют.
+</item>
+	</string-array>
+
+	<string-array name="tasty_uksus">
+	<item>Если вам почему-либо нужно дома приготовить ароматный уксус (его легко и просто купить в
+        ближайшем магазине), можем предложить такой рецепт. В обычный столовый уксус положите эстрагон, сельдерей или укроп (100 г на 1 л уксуса); можно добавить антоновское яблоко, нарезанное дольками, листья черной смородины, или липовый цвет, или лавровый лист.</item>
+	<item>Плотно закройте посуду с уксусом и дайте ему постоять дней 15. После этого процедите через
+        марлю и заправляйте им винегреты, салат, сельдь, форшмак.  </item>
+	</string-array>
+
+<string-array name="artishoks">
+	<item>В пищу идут только донышки артишоков и основание их листьев, верхушки же листьев несъедобны.
+        Приготовлять артишоки следует так: отрезать у них стебель у самого основания и срезать твердые
+        части листьев. </item>
+	<item>Донышко артишока в том месте, где отрезан стебель, натереть лимоном, чтобы оно не потемнело.
+        Ручкой столовой ложки из середины артишоков удалить сердцевину. </item>
+	<item>Приготовленные артишоки промыть, сложить в кастрюлю в один ряд, залить горячей водой в
+        таком количестве, чтобы вода только покрыла артишоки, посолить и варить в закрытой кастрюле 10–15 минут.</item>
+	<item> Готовность артишоков можно определить острием ножа: если нож свободно входит в мякоть
+        артишока, он готов. Готовые артишоки переложить на сито донышками вверх, дать стечь воде,
+        затем поместить их на блюдо, на которое предварительно положить сложенную конвертом салфетку.</item>
+	<item>Артишоки надо класть в один ряд, украсив их веточками зелени. К артишокам подать соус
+        яичный с вином или яично-масляный.</item>
+	
+	</string-array>
+
+<string-array name="abricos_juice">
+
+	<item>Взять совершенно зрелые абрикосы с сочной интенсивно окрашенной мякотью. Плоды промыть и
+        удалить из них косточки.</item>
+	<item>Полученную мякоть с кожицей нагревать в кастрюле с добавлением небольшого количества
+        воды до размягчения плодов. Горячую разваренную массу протереть через обыкновенное сито.
+        При этом получается до­вольно густая пюреобразная масса.</item>
+	<item>Отдельно приготовить сахарный сироп 15—20%-ной концентрации. Горячий сироп добавить в
+        кастрюлю с абрикосовым пюре (на 1 л пюре 1 л сиропа), все тщательно перемешать и подогреть до 80—85°</item>
+	<item>Полученный сок с мякотью разлить в стеклянные консервные банки (так как в узкогорлые
+        бутылки его трудно залить и в дальнейшем будет трудно выливать). Банки со стеклянными
+        крышками сразу укупорить и пастеризовать, а обычные консерв­ные банки с жестяными крышками
+        стерилизо­вать прикрытыми, а не закатанными и зака­тать их уже после стерилизации (как
+        описано выше).</item>
+	</string-array>
+
+<string-array name="arbus_honey">
+	<item>Зрелые сладкие арбузы вымыть, разрезать ножом на 2—4 части, выбрать из них мякоть в таз,
+        измельчить ее ножом, протереть через сито или дуршлаг. Полученный сок налить в кастрюлю и
+        поставить на огонь. </item>
+	<item> В начале уваривания на поверхности сока появится красноватая пена. Снять пену, а горячий
+        сок процедить через марлю или редкую ткань и снова поставить на огонь для уваривания.</item>
+	<item>Уваривание вести при не очень сильном кипении и постоянном помешивании, чтобы сок не
+        пригорел. Уваривать надо до тех пор, пока объем сока уменьшится в 5—6 раз. Капля готового
+        арбузного меда, взятая из кастрюли, при охлаждении не должна расплываться.</item>
+	<item>Сваренный арбузный мед можно хранить и в негерметичной таре, но лучше его сразу в горячем
+        виде разлить в консервные стеклянные банки и закатать их крышками.</item>
+	</string-array>
+
+
+
+
 	<string-array name="snacks_salat_so_smetanoy">
         <item>Обмытый и отсушенный зеленый салат нарезать и сложить в миску.</item>
-        <item>Яйца, сваренные вкрутую, нарезать тонкими ломтиками и смешать с соусом из сметаны с уксусом.</item>
-        <item>Перед самой подачей к столу заправить салат сметанным соусом с яйцом, уложить в салатник, обложить кружочками свежих огурцов и посыпать мелко нарезанным укропом или зеленью петрушки.</item>
+        <item>Яйца, сваренные вкрутую, нарезать тонкими ломтиками и смешать с соусом из сметаны
+            с уксусом.</item>
+        <item>Перед самой подачей к столу заправить салат сметанным соусом с яйцом, уложить в
+            салатник, обложить кружочками свежих огурцов и посыпать мелко нарезанным укропом или
+            зеленью петрушки.</item>
         <item>Подается салат ко всем мясным и рыбным блюдам.</item>
         </string-array>
 
@@ -37,7 +105,8 @@
         Затем немного остудить. Пропустить печень через мясорубку. </item>
         <item> Смешать печень и морковь.  Добавить половину желатина в печеночную массу, перемешать.</item>
         <item> Смешать сыр, помидоры, зелень. Добавить оставшийся желатин в сырную массу, перемешать. </item>
-        <item> Выложить половину печени в форму (я использовала форму размером 11×23 см, и высотой 5 см), разровнять . На печень выложить весь сыр, разровнять.
+        <item> Выложить половину печени в форму (я использовала форму размером 11×23 см, и высотой
+            5 см), разровнять . На печень выложить весь сыр, разровнять.
         На сыр выложить оставшуюся печень, разровнять. Поставить в холодильник на 5–6 часов </item>
     </string-array>
 
@@ -65,7 +134,7 @@
 
     <string-array name="orange_drink">
         <item>Смешать 3/4 стакана молока и 1/4 стакана апельсинового сока.</item>
-        <item>Lобавить 1 ст. ложку сахару и все это взбить веничком, чтобы образовалась однородная
+        <item>Добавить 1 ст. ложку сахару и все это взбить веничком, чтобы образовалась однородная
             масса. Подать в охлажденном виде.</item>
     </string-array>
 
