--- a/app/src/main/res/layout/card_available_reciepe.xml
+++ b/app/src/main/res/layout/card_available_reciepe.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Small Text"
+                android:text="продуктов"
                 android:id="@+id/numOfIngs"
                 android:layout_alignTop="@+id/view"
                 android:layout_below="@+id/avlRcpNameTV"
